# sandbox

cpp/hybridization/: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  buildspec.yml  cmake_templateConfig.cmake.in  project_setup.sh  test.sh
cpp/hybridization/apps/examples/calculator-runner/: CMakeLists.txt  calculator-runnerConfig.cmake.in
cpp/hybridization/apps/examples/calculator-runner/src/: main.cpp
cpp/hybridization/apps/examples/hybridization/: CMakeLists.txt  hybridizationConfig.cmake.in
cpp/hybridization/apps/examples/hybridization/src/: main.cpp
cpp/hybridization/deb/: doc  postinst  postrm
cpp/hybridization/modules/examples/addition/: CMakeLists.txt  additionConfig.cmake.in
cpp/hybridization/modules/examples/addition/include/cmake_template/addition/: addition.h
cpp/hybridization/modules/examples/addition/src/: addition.cpp
cpp/hybridization/modules/examples/addition/test/: CMakeLists.txt  test_addition.cpp  test_main.cpp
cpp/hybridization/modules/examples/calculator/: CMakeLists.txt  calculatorConfig.cmake.in
cpp/hybridization/modules/examples/calculator-cli/: CMakeLists.txt  calculator-cliConfig.cmake.in
cpp/hybridization/modules/examples/calculator-cli/include/cmake_template/calculator-cli/: calculator-cli.h
cpp/hybridization/modules/examples/calculator-cli/src/: calculator-cli.cpp
cpp/hybridization/modules/examples/calculator-cli/test/: CMakeLists.txt  test_calculator-cli.cpp
cpp/hybridization/modules/examples/calculator/include/cmake_template/calculator/: calculator.h
cpp/hybridization/modules/examples/calculator/src/: calculator.cpp
cpp/hybridization/modules/examples/calculator/test/: CMakeLists.txt  foo_operator.h  test_calculator.cpp
cpp/hybridization/modules/examples/operator/: CMakeLists.txt  operatorConfig.cmake.in
cpp/hybridization/modules/examples/operator/include/cmake_template/operator/: operator.h
cpp/hybridization/modules/template_library/: CMakeLists.txt  template_libraryConfig.cmake.in
cpp/hybridization/modules/template_library/include/cmake_template/template_library/: template_class.h
cpp/hybridization/modules/template_library/src/: template_class.cpp
cpp/hybridization/modules/template_library/test/: CMakeLists.txt  test_template_class.cpp
cpp/hybridization/test/: CMakeLists.txt  test_calculator.cpp  test_template_library.cpp
python/axis_calibration/: README.md  requirements.txt
python/axis_calibration/src/: calibration_optimizer.py  calibration_seam_optimizer.py  pose_graph_w_qAvg.py  stitcher.py  tools.py
python/growing_regions/src/: grow.py  grow_geodesic.py  seam_geometry.ply  tools.py
python/mesh_subdivision/: mesh_subdivision.py
python/pcd_mesh_repair/: baseplate_plane_fit.py  pcd_repair.py  requirements.txt
python/stepWork/: README.md
python/stepWork/data/: Cube.STEP
python/stepWork/data/cincyFan/: 56260-13 (RBE-13 Wheel).PLY  model.STEP
python/stepWork/data/results/: Box+Cylinder_times.json  Box_times.json  Cincy wheel_times.json  Cylinder_times.json  Yoshi part_times.json
python/stepWork/data/results/Cube/: shape_0.stl
python/stepWork/data/results/Yoshi_Hex/: shape_1.stl  shape_10.stl  shape_100.stl  shape_101.stl  shape_102.stl  shape_103.stl  shape_104.stl  shape_105.stl  shape_106.stl  shape_107.stl  shape_108.stl  shape_109.stl  shape_11.stl  shape_110.stl  shape_111.stl  shape_112.stl  shape_113.stl  shape_114.stl  shape_115.stl  shape_116.stl  shape_117.stl  shape_118.stl  shape_119.stl  shape_12.stl  shape_120.stl  shape_121.stl  shape_122.stl  shape_123.stl  shape_124.stl  shape_125.stl  shape_126.stl  shape_127.stl  shape_128.stl  shape_129.stl  shape_13.stl  shape_130.stl  shape_131.stl  shape_132.stl  shape_133.stl  shape_134.stl  (+130 more)
python/stepWork/data/results/model/: shape_1.stl  shape_10.stl  shape_100.stl  shape_101.stl  shape_102.stl  shape_103.stl  shape_104.stl  shape_105.stl  shape_106.stl  shape_107.stl  shape_108.stl  shape_109.stl  shape_11.stl  shape_110.stl  shape_111.stl  shape_112.stl  shape_113.stl  shape_114.stl  shape_115.stl  shape_116.stl  shape_117.stl  shape_118.stl  shape_119.stl  shape_12.stl  shape_120.stl  shape_121.stl  shape_122.stl  shape_123.stl  shape_124.stl  shape_125.stl  shape_126.stl  shape_127.stl  shape_128.stl  shape_129.stl  shape_13.stl  shape_130.stl  shape_131.stl  shape_132.stl  shape_133.stl  shape_134.stl  (+213 more)
python/stepWork/data/yoshi_hex/: Yoshi_Hex.STEP  expected_feature_0_segment_0.ply  expected_feature_10_segment_0.ply  expected_feature_11_segment_0.ply  expected_feature_12_segment_0.ply  expected_feature_12_segment_1.ply  expected_feature_1_segment_0.ply  expected_feature_3_segment_0.ply  expected_feature_4_segment_0.ply  expected_feature_5_segment_0.ply  expected_feature_6_segment_0.ply  expected_feature_7_segment_0.ply  expected_feature_8_segment_0.ply  expected_feature_9_segment_0.ply  ideal_mesh.ply
python/stepWork/src/: parseFile.py  sampling_timing.py  show_seams_on_stl.py
